fixed grid stretch; styled statistic values; placed button

--- a/dcGraphs/assets/css/style.css
+++ b/dcGraphs/assets/css/style.css
@@ -13,11 +13,6 @@ body {
     background-color: #fafafa;
 }
 
-/* Header Grid */
-.column {
-    display: flex;
-}
-
 /* Table */
 
 td.dc-table-label {
